--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sources:",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack -w && nodemon dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoît Hubert <benoithubert@gmail.com> (jsx.fr)",
@@ -14,10 +14,12 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "nodemon": "^1.18.9",
     "react-hot-loader": "^4.6.3",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "react": "^16.7.0",
