--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ssr-react-boilerplate",
   "version": "1.0.0",
   "description": "Sources:",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack -w && nodemon dist/server.js",
+   "start": "webpack --progress --colors -w",
+   "dev-server": "nodemon ./dist/server.js",
+   "dev-client": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoît Hubert <benoithubert@gmail.com> (jsx.fr)",
