--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Sources:",
   "scripts": {
-   "start": "webpack --progress --colors -w",
-   "dev-server": "nodemon ./dist/server.js",
-   "dev-client": "webpack-dev-server",
+    "start": "webpack --progress --colors -w",
+    "dev-server": "nodemon ./dist/server.js",
+    "dev-client": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoît Hubert <benoithubert@gmail.com> (jsx.fr)",
@@ -23,6 +23,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
