--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack --progress --colors -w",
     "dev-server": "nodemon ./dist/server.js",
-    "dev-client": "webpack-dev-server",
+    "dev-client": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Benoît Hubert <benoithubert@gmail.com> (jsx.fr)",
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
     "react-hot-loader": "^4.6.3",
     "webpack": "^4.28.4",
